--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/file": "^4.13.0",
     "@ionic-native/http": "^4.12.2",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
@@ -28,6 +29,7 @@
     "@ionic/storage": "2.1.3",
     "@types/papaparse": "^4.5.3",
     "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-file": "^6.0.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "papaparse": "^4.6.0",
@@ -42,7 +44,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-file": {}
     }
   }
 }
